...
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="entryList"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                        <barButtonItem systemItem="add" id="snQ-Hi-5OZ">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addEntry"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
        <scene sceneID="JbH-3g-S1d">
            <objects>
                <tableViewController storyboardIdentifier="entryDetail" id="vv1-3h-pTa" customClass="EntryDetailController" customModule="sr_ios_storyboard" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iha-kM-Re5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                            <textInputTraits key="textInputTraits"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="editTitle"/>
                                            </userDefinedRuntimeAttributes>
                                        </textField>
...
                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="editContent"/>
                                            </userDefinedRuntimeAttributes>
                                        </textView>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tdW-pe-ggm">
                                        <rect key="frame" x="0.0" y="28.5" width="310.5" height="34"/>
                                        <accessibility key="accessibilityConfiguration">
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xxK-l1-A9J">
                                        <rect key="frame" x="0.0" y="70.5" width="310.5" height="34"/>
                                        <accessibility key="accessibilityConfiguration">
...
                                            <bool key="isElement" value="NO"/>
                                        </accessibility>
                                        <state key="normal" title="Login"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="loginButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                        <viewLayoutGuide key="safeArea" id="BUh-5g-556"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="login"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
...
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repassword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Df7-xI-GiA">
                                        <rect key="frame" x="0.0" y="112.5" width="310.5" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <state key="normal" title="Register"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="registerButton"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
...
                    <tabBarItem key="tabBarItem" title="Register" image="square.and.pencil" catalog="system" id="066-kR-6z1">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="registerTab"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
