...
    private var dataSoure: UITableViewDataSource?
    private var isNew: Bool?
    private var _setEditing: (() -> Void)?
    var parentInNew: EntryListController?
    
    func configure(entry: Entry?, isNew: Bool = false) {
        editButtonItem.accessibilityIdentifier = "editEntry"
        navigationItem.setRightBarButton(editButtonItem, animated: false)
        self.entry = entry
        self.isNew = isNew
        self.setEditing(isNew, animated: true)
    }
    
...
        self.dataSoure = EntryDetailEditDataSource(entry: entry) {
            self.tmpEntry = $0
        }
        tableView.dataSource = self.dataSoure
        tableView.reloadData()
        navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(cancelEdit))
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = "cancelEdit"
        self._setEditing?()
    }
    
    override func setEditing(_ editing: Bool, animated: Bool) {
        _setEditing = {
            super.setEditing(editing, animated: animated)
...
