...

class RegisterView: UIView {
    @IBOutlet var username: UITextField!
    @IBOutlet var password: UITextField!
    @IBOutlet var repassword: UITextField!
    @IBOutlet var container: UIStackView!
    var error: UILabel?
    var register: ((String, String, String) -> Void)?
    
    func configure(register: @escaping (String, String, String) -> Void) {
        self.register = register
    }
    
...
